analytics, popovers and debugging started analytics - kind of going into a rabbit hole of which way to implement analytics. analytics.js doesnt typically work in Ionic. wanting to use cordova-google-analytics plugin but i cannot figure out if that is only for mobile or not. need one for a PWA (progessive webapp). need to finish the add team members popover, popover is popping over but need to put logic behind it but have to figure out where to move functions to etc. built out assessment scope popover and on mobile an assessment info popover that shows date, mrl, and scope. cleaner than keeping topbar topbar wasnt grabbing the assessmentID correctly. now it is working and grabbing assessment info correctly by calling getting the currentAssessment in topbar

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -122,6 +122,13 @@ input:focus, textarea:focus {
   padding: 30px;
 }
 
+.scope-popover .popover-content{
+  width: 200px;
+  padding: 20px;
+  height: 200px;
+  
+}
+
 @media screen and (max-width: 420px){
     .upload-popover .popover-content {
         position: absolute;
